# agents

./: .gitignore  pyproject.toml  requirements.txt
3_crew/a0/: README.md  pyproject.toml  report.md
3_crew/a0/src/a0/: crew.py  main.py
3_crew/aws_test/: README.md  pyproject.toml  report.md
3_crew/aws_test/src/aws_test/: crew.py  main.py
3_crew/content/: README.md  pyproject.toml
3_crew/content/.kilocode/rules/: memory_bank.md
3_crew/content/.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tasks.md  tech.md
3_crew/content/docs/: execution-plan.md
3_crew/content/ouput_9/agent/carousel_planner/: plan_carousel.md
3_crew/content/ouput_9/agent/compositor/: generate_add_logo_to_image.md  generate_image.md  generate_text_to_image.md
3_crew/content/ouput_9/agent/copywriter/: write_copy.md
3_crew/content/ouput_9/agent/image_prompt_engineer/: engineer_prompts.md
3_crew/content/output/agent/carousel_planner/: plan_carousel.json  plan_carousel.md
3_crew/content/output/agent/compositor/: generate_add_logo_to_image.md  generate_image.md  generate_text_to_image.md
3_crew/content/output/agent/copywriter/: write_copy.json  write_copy.md
3_crew/content/output/agent/image_prompt_engineer/: engineer_prompts.json  engineer_prompts.md
3_crew/content/output/posts/how-compound-interest-works/: metadata.json
3_crew/content/output_0/agent/carousel_planner/: plan_carousel.md
3_crew/content/output_0/agent/compositor/: generate_add_logo_to_image.md  generate_image.md  generate_text_to_image.md
3_crew/content/output_0/agent/copywriter/: write_copy.md
3_crew/content/output_0/agent/image_prompt_engineer/: engineer_prompts.md
3_crew/content/output_1/agent/carousel_planner/: plan_carousel.md
3_crew/content/output_1/agent/compositor/: generate_add_logo_to_image.md  generate_image.md  generate_text_to_image.md
3_crew/content/output_1/agent/copywriter/: write_copy.md
3_crew/content/output_1/agent/image_prompt_engineer/: engineer_prompts.md
3_crew/content/output_10/agent/carousel_planner/: plan_carousel.md
3_crew/content/output_10/agent/compositor/: generate_add_logo_to_image.md  generate_image.md  (+1 more)
3_crew/content/src/content/: crew.py  main.py  types.py
3_crew/video_generation_crew/: README.md  pyproject.toml
3_crew/video_generation_crew/src/video_generation_crew/: crew.py  main.py
(+109 files in other folders)
