[project]
name = "a0"
version = "0.1.0"
description = "a0 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
a0 = "a0.main:run"
run_crew = "a0.main:run"
train = "a0.main:train"
replay = "a0.main:replay"
test = "a0.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
