[project]
name = "aws_test"
version = "0.1.0"
description = "aws_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "boto3>=1.26.0"
]

[project.scripts]
aws_test = "aws_test.main:run"
run_crew = "aws_test.main:run"
train = "aws_test.main:train"
replay = "aws_test.main:replay"
test = "aws_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
